--- a/index.html
+++ b/index.html
@@ -21,40 +21,53 @@
 
             </div>
 
+            <!-- Menu icon-->
+            <div class="icon_container" onclick="myFunction(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
         </nav>
     </header>
 
     <main>
 
         <div class="home_section">
-        
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <h1>This is where we put the content</h1>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            
+
+            <div class="tab">
+                <button class="tablinks">Home</button>
+                <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">News</button>
+                <button class="tablinks" onclick="openCity(event, 'Paris')">Facilities</button>
+                <button class="tablinks" onclick="openCity(event, 'Tokyo')">Explore</button>
+            </div>
+
+            <div id="London" class="tabcontent">
+                <h3>London</h3>
+                <p>London is the capital city of England. And England is my city!<br><br>
+
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Urna et pharetra pharetra massa massa ultricies mi. Eu tincidunt tortor aliquam nulla facilisi. Pellentesque elit ullamcorper dignissim cras tincidunt. Sodales ut etiam sit amet nisl purus in. Feugiat vivamus at augue eget. Non odio euismod lacinia at. Risus feugiat in ante metus dictum. Mattis rhoncus urna neque viverra justo nec ultrices dui sapien. Lectus vestibulum mattis ullamcorper velit sed. Nulla facilisi morbi tempus iaculis urna.<br>
+
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Urna et pharetra pharetra massa massa ultricies mi. Eu tincidunt tortor aliquam nulla facilisi. Pellentesque elit ullamcorper dignissim cras tincidunt. Sodales ut etiam sit amet nisl purus in. Feugiat vivamus at augue eget. Non odio euismod lacinia at. Risus feugiat in ante metus dictum. Mattis rhoncus urna neque viverra justo nec ultrices dui sapien. Lectus vestibulum mattis ullamcorper velit sed. Nulla facilisi morbi tempus iaculis urna.<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Urna et pharetra pharetra massa massa ultricies mi. Eu tincidunt tortor aliquam nulla facilisi. Pellentesque elit ullamcorper dignissim cras tincidunt. Sodales ut etiam sit amet nisl purus in. Feugiat vivamus at augue eget. Non odio euismod lacinia at. Risus feugiat in ante metus dictum. Mattis rhoncus urna neque viverra justo nec ultrices dui sapien. Lectus vestibulum mattis ullamcorper velit sed. Nulla facilisi morbi tempus iaculis urna.
+
+                </p>
+            </div>
+
+            <div id="Paris" class="tabcontent">
+                <h3>Paris</h3>
+                <p>Paris is the capital of France.</p>
+            </div>
+
+            <div id="Tokyo" class="tabcontent">
+                <h3>Tokyo</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
         </div>
 
     </main>
 
+    <!-- FOOTER -->
     <footer class="page_footer">
 
         <div class="footer_card1">
@@ -79,6 +92,6 @@
 
     </footer>
 
-</body>
+    <script src="js/js.js"></script>
 
-</html>
+</body></html>
