--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
         <div class="sections">
 
-            <div class="tab">
-                <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
-                <button class="tablinks" onclick="openCity(event, 'News')">News</button>
-                <button class="tablinks" onclick="openCity(event, 'Facilities')">Facilities</button>
-                <button class="tablinks" onclick="openCity(event, 'Explore')">Explore</button>
+            <div class="tab" id="mySidenav">
+                    <button onclick="openTab(event, 'Home')" id="about">Home</button>
+                    <button onclick="openTab(event, 'News')" id="blog">News</button>
+                    <button onclick="openTab(event, 'Facilities')" id="projects">Facilities</button>
+                    <button onclick="openTab(event, 'Explore')" id="contact">Explore</button>
             </div>
 
 
@@ -81,13 +81,14 @@
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
-                    <br>
 
-                    <!-- The dots/circles -->  
-                    <div style="text-align:center">
+                    <!-- The dots/circles -->
+                    <div class="dot_div" style="text-align:center">
                         <span class="dot" onclick="currentSlide(1)"></span>
                         <span class="dot" onclick="currentSlide(2)"></span>
                         <span class="dot" onclick="currentSlide(3)"></span>
+                        <span class="dot" onclick="currentSlide(4)"></span>
+                        <span class="dot" onclick="currentSlide(5)"></span><br><br> 
                     </div>
                 </div>
 
@@ -126,6 +127,8 @@
             </div>
 
         </div>
+        
+        <div class="white_stripe"></div>
 
     </main>
 
