--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="sections">
 
             <div class="tab" id="mySidenav">
-                    <button onclick="openTab(event, 'Home')" id="about">Home</button>
-                    <button onclick="openTab(event, 'News')" id="blog">News</button>
-                    <button onclick="openTab(event, 'Facilities')" id="projects">Facilities</button>
-                    <button onclick="openTab(event, 'Explore')" id="contact">Explore</button>
+                    <button class="menu_button" onclick="openTab(event, 'Home')" id="about">Home</button>
+                    <button class="menu_button" onclick="openTab(event, 'News')" id="blog">News</button>
+                    <button class="menu_button" onclick="openTab(event, 'Facilities')" id="projects">Facilities</button>
+                    <button class="menu_button" onclick="openTab(event, 'Explore')" id="contact">Explore</button>
             </div>
 
 
@@ -118,7 +118,17 @@
 
             <div id="Facilities" class="tabcontent">
                 <h2 class="heading1">FACILITIES</h2>
-                <p>Paris is the capital of France.</p>
+                <h3 class="fac_heading">MULTIMEDIA ROOM</h3>
+                <img class="fac_image1" src="images/multimedia_room.jpg" alt="Multimedia room">
+                <p class="fac_description1">Our multimedia room is perfect for students who would like to work together on a school project or just want to enjoy a nice movie. The room has a projector and many tables and chairs so it's ready for any group to be rented out. Contact the residents' council to borrow a key to the multimedia room. Check out the dorm's website to read the rules of the multimedia room before renting it out. </p>
+                
+                <h3 class="fac_heading">GYM</h3>
+                <img class="fac_image2" src="images/gym2.jpg" alt="Gym">
+                <p class="fac_description1">Our gym is located in the basement of building 40. There you can find several gym equipment such as a treadmill or a bench and many weights that inhabitants can use to exercise. Read further information on the dorm's website such as rules of the gym and monthly fee.</p>
+                
+                <h3 class="fac_heading">MUSIC ROOM</h3>
+                <img class="fac_image3" src="images/music_room.jpg" alt="Music room">
+                <p class="fac_description1">The music room is equipped with several instruments such as a piano or drums. There's also 2 stereo speakers for students to use. Ask the caretaker for the keys if you would like to use the room.</p>
             </div>
 
             <div id="Explore" class="tabcontent">
