The map and the rest of the content

--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
                     <br>
                     <p>Read more recommendations from the Danish Health Authority, as well as how to behave in case of infection on Ravnsbjerg Kollegiet's website.</p>
                 </div>
+                
+                <br><br><br>
+                <hr/>
+                <h3 class="heading1">Dos and don'ts in Ravnsbjerg</h3>
+                <img class="fac_image4" src="images/yesandno.png">
 
             </div>
 
@@ -174,13 +179,14 @@
             <!-- EXPLORE (MAP) -->
             <div id="Explore" class="tabcontent">
                 <h2 class="heading1">EXPLORE</h2>
-                <p>Explore the map of the dorm.</p>
-                <div id='map' style='width: 400px; height: 300px;'></div>
+                <p>Explore the map of our dorm.</p><br>
+                <div id='map' style='width: 300px; height: 387px; border: 1px solid #2A2A2A;
+        margin-left: 12%;'></div>
                 <script>
                     mapboxgl.accessToken = 'pk.eyJ1IjoidHdlbnl0d2VsdmUiLCJhIjoiY2tucmJqMHM1MGU5aTJ2bzc4c2Jmc2t1OSJ9.TBYAURDvqarW56GRuP6xpg';
                     var map = new mapboxgl.Map({
                         container: 'map',
-                        style: 'mapbox://styles/mapbox/streets-v11'
+                        style: 'mapbox://styles/twenytwelve/cknrj81tp0tvh17pj98v43xfc'
                     });
                 </script>
             </div>
